Add section about.html

--- a/about.html
+++ b/about.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- STYLE ABOUT CSS -->
+    <link rel="stylesheet" href="./assets/css/main.css">
     <title>About</title>
 </head>
 <body>
-    
+    <!-- Start About Banner with Header  -->
+    <section class="about-banner"></section>
+    <!-- End About Banner with Header  -->
+    <!-- Start About content  -->
+    <section class="about-content"></section>
+    <!-- End About content -->
+    <!-- Start About feature -->
+    <section class="about-feature"></section>
+    <!-- End About feature -->
+    <!-- Start About Middle -->
+    <section class="about-middle"></section>
+    <!-- End About Middle -->
+    <!-- Start About Pricing -->
+    <section class="about-pricing"></section>
+    <!-- End About Pricing -->
+    <!-- Start About Footer -->
+    <footer class="about-footer"></footer>
+    <!-- End About Footer -->
+    <!-- Start Copyright -->
+    <section class="about-copyright"></section>
+    <!-- End Copyright -->
 </body>
 </html>
