--- a/about.html
+++ b/about.html
@@ -4,31 +4,352 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- STYLE ABOUT CSS -->
-    <link rel="stylesheet" href="./assets/css/main.css">
+    <!-- Font Quicksand Google -->
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Font Pacifico Google -->
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <!-- FontAwsome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Bootstrap CSS -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="./assets/css/Vendor/bootstrap.min.css">
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="./assets/css/dev-b-main.css">
+    <style>
+        *{
+        font-family: 'Quicksand', sans-serif;
+        box-sizing: border-box;
+        /* font-family: 'Pacifico', cursive; */
+        }
+    </style>
     <title>About</title>
 </head>
 <body>
+    <!-- Start Right-Bar -->
+    <div class="pull-right">
+        <span class="pull-left-button fa fa-angle-double-left b-dl-none"></span>
+     </div>
+    <div class="right-bar">
+        <div class="pull-right pull-right-position">
+            <span class="pull-right-button fa fa-angle-double-right "></span>
+         </div>
+        <div class="wrap-right-bar">
+            <div class="demo-btns">
+                <a href="#">
+                    <span class="b-icon-right-bar back">
+                        <span class="fa fa-arrow-left"></span>
+                    </span>
+                    <span class="b-text">Back</span>
+                </a>
+                <a href="#">
+                    <span class="b-icon-right-bar download">
+                        <span class="fa fa-download"></span>
+                    </span>
+                    <span class="b-text">Download</span>
+                </a>
+                <a href="#" class="">
+                    <span class="b-icon-right-bar buy">
+                        <span class="fa fa-shopping-cart"></span>
+                    </span>
+                    <span class="b-text">Buy</span>
+                </a>
+            </div>
+        </div>
+    </div>
+     <!-- End Right-Bar -->
     <!-- Start About Banner with Header  -->
-    <section class="about-banner"></section>
+    <section class="b-banner">
+        <div class="container">
+            <header class="b-header">
+                    <div class="b-header__logo">
+                        <h1><a href="#">Diner</a></h1>
+                    </div>
+                    <div class="b-header__menu-right-content">
+                        <div class="b-search-bar">
+                            <form class="b-search">
+                                <input type="search" class="b-search__input" placeholder="Search here...">
+                                <span class="fa fa-search b-search__icon"></span>
+                            </form>
+                        </div>
+                        <div class="b-menu-theme">
+                           <span class="fa fa-moon"></span>
+                           <span class="fa fa-sun"></span>
+                        </div>
+                        <div class="b-mobile-nav-button">
+                            <button type="button" class="trigger-overplay"><span class="fa fa-bars"></span></button>
+                        </div>
+                    </div>
+                    <div class="b-overlay b-overlay-scale">
+                        <button type="button" class="overlay-close"><i class="fa fa-times" aria-hidden="true"></i></button>
+                        <nav>
+                          <ul>
+                            <li><a href="index.html" class="active">Home</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="services.html">Services</a></li>
+                            <li><a href="blog.html">Blog</a></li>
+                            <li><a href="error.html">404</a></li>
+                            <li><a href="landing-single.html">Landing Page</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="elements.html">Shot Codes</a></li>
+                            <li><a href="email.html">Email</a></li>
+                          </ul>
+                        </nav>
+                    </div>
+            </header>
+            <div class="b-breadcrumb text-center">
+                <ul class="b-breadcrumb__custom-path">
+                    <li><a href="#">Home</a></li>
+                    <li><span class="fa fa-chevron-right"></span>About</li>
+                </ul>
+            </div>
+        </div>
+    </section>
     <!-- End About Banner with Header  -->
-    <!-- Start About content  -->
-    <section class="about-content"></section>
+     <!-- Start About content  -->
+     <section class="about-content b-py-3">
+        <div class="container py-lg-5">
+            <div class="b-header-title">
+                <h6 class="b-title-sub">The Story</h6>
+                <h3 class="b-title mb-5">
+                    About Us
+                </h3>
+            </div>
+            <div class="row align-items-center">
+                <div class="about-content__left col-lg-6 col-md-12">
+                    <img src="./assets/image/banner1.jpg" class="img-fluid b-radius-image" alt="">
+                </div>
+                <div class="about-content__right col-lg-6 col-md-12 ps-lg-5">
+                    <div class="b-header-title">
+                        <h3 class="b-title">
+                            We found our creative space that is open for you.
+                        </h3>
+                    </div>
+                    <p class="my-4">Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper. Nunc id ipsum fringilla, gravida felis vitae. Phasellus lacinia id, sunt in culpa quis. Phasellus lacinia</p>
+                    <p class="mb-4">Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper.</p>
+                    <a href="#" class="btn btn-style btn-primary mt-4">Read more <span class="fa fa-chevron-right" aria-hidden="true"></span></a>
+                </div>
+            </div>
+            <div class="about-content-two row mt-5">
+                <div class="item col-lg-3 col-md-6 mt-mb-xs-5">
+                    <div class="b-header-title">
+                        <h3 class="b-title">
+                            What we Do?.
+                        </h3>
+                    </div>
+                </div>
+                <div class="item col-lg-3 col-md-6 mt-mb-sm-5 mt-mb-xs-5">
+                    <h4><a href="#">Strategy and Timing</a></h4>
+                    <p>Phasellus lacinia id
+                        erat eu ullamcorper. Nunc id ipsum fringilla.</p>
+                </div>
+                <div class="item col-lg-3 col-md-6 mt-mb-md-5 mt-mb-sm-5 mt-mb-xs-5">
+                    <h4><a href="#">Leaders Of Tomorrow</a></h4>
+                    <p>Phasellus lacinia id
+                        erat eu ullamcorper. Nunc id ipsum fringilla.</p>
+                </div>
+                <div class="item col-lg-3 col-md-6 mt-mb-md-5 mt-mb-sm-5 mt-mb-xs-5">
+                    <h4><a href="#">Brand - Centered Buying</a></h4>
+                    <p>Phasellus lacinia id
+                        erat eu ullamcorper. Nunc id ipsum fringilla.</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- End About content -->
-    <!-- Start About feature -->
-    <section class="about-feature"></section>
-    <!-- End About feature -->
-    <!-- Start About Middle -->
-    <section class="about-middle"></section>
-    <!-- End About Middle -->
-    <!-- Start About Pricing -->
-    <section class="about-pricing"></section>
-    <!-- End About Pricing -->
+    <!-- Start Skill content  -->
+    <section class="skill-content b-py-3">
+        <div class="b-py-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-5 col-md-12">
+                        <div class="b-header-title mb-3">
+                            <h6 class="b-title-sub">Skills</h6>
+                            <h3 class="b-title">
+                                Strategy is at the Heart of What We Do
+                            </h3>
+                        </div>
+                        <p>Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula.</p>
+                        <div class="skill-bars mt-4">
+                            <div class="b-progress-info">
+                                <h6 class="b-progress-tittle">Digital Strategy</h6>
+                                <div class="b-progress">
+                                  <div class="b-progress-bar">
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="b-progress-info">
+                                <h6 class="b-progress-tittle">Digital Strategy</h6>
+                                <div class="b-progress">
+                                  <div class="b-progress-bar w-95">
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="b-progress-info">
+                                <h6 class="b-progress-tittle">Digital Strategy</h6>
+                                <div class="b-progress">
+                                  <div class="b-progress-bar w-55">
+                                  </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-7 col-md-12 ps-lg-5">
+                        <div class="skill-image">
+                            <img src="./assets/image/g1.jpg" class="img-fluid b-radius-image" alt="">
+                            <img src="./assets/image/g2.jpg" class="img-fluid b-radius-image" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Skill content -->
+     <!-- Start About Team  -->
+     <section class="about-team b-py-3">
+        <div class="b-py-3">
+            <div class="container">
+                <div class="b-header-title text-center">
+                    <h6 class="b-title-sub">Our team</h6>
+                    <h3 class="b-title mb-4">
+                        Meet Our Chefs
+                    </h3>
+                </div>
+                <div class="row mt-5">
+                   <div class="col-lg-4 col-md-6 col-6">
+                        <div class="team-item text-center">
+                            <div class="team-image">
+                                <img src="./assets/image/chef2.jpg" alt="" class="img-fluid b-radius-image">
+                                <div class="team-overplay">
+                                    <div class="menu-socials">
+                                        <a href="#facebook" class="facebook"><span class="fa-brand fa-facebook"></span></a>
+                                        <a href="#twitter" class="twitter"><span class="fa-brand fa-twitter"></span></a>
+                                        <a href="#instagram" class="instagram"><span class="fa-brand fa-instagram"></span></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <a href="#url" class="team-title">Daniel jacobs</a>
+                            <p>Chef</p>
+                        </div>
+                   </div>
+                   <div class="col-lg-4 col-md-6 col-6 ">
+                    <div class="team-item text-center">
+                        <div class="team-image">
+                            <img src="./assets/image/chef1.jpg" alt="" class="img-fluid b-radius-image">
+                            <div class="team-overplay">
+                                <div class="menu-socials">
+                                    <a href="#facebook" class="facebook"><span class="fa-brand fa-facebook"></span></a>
+                                    <a href="#twitter" class="twitter"><span class="fa-brand fa-twitter"></span></a>
+                                    <a href="#instagram" class="instagram"><span class="fa-brand fa-instagram"></span></a>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="#url" class="team-title">Claire Daniel</a>
+                        <p>Chef</p>
+                    </div>
+                   </div>
+                   <div class="col-lg-4 col-md-6 col-6 mt-mb-md-5 mt-mb-sm-5 mt-mb-xs-5">
+                    <div class="team-item text-center">
+                        <div class="team-image">
+                            <img src="./assets/image/chef2.jpg" alt="" class="img-fluid b-radius-image">
+                            <div class="team-overplay">
+                                <div class="menu-socials">
+                                    <a href="#facebook" class="facebook"><span class="fa-brand fa-facebook"></span></a>
+                                    <a href="#twitter" class="twitter"><span class="fa-brand fa-twitter"></span></a>
+                                    <a href="#instagram" class="instagram"><span class="fa-brand fa-instagram"></span></a>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="#url" class="team-title">Daniel Hunt</a>
+                        <p>Chef</p>
+                    </div>
+                   </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End About Team -->
     <!-- Start About Footer -->
-    <footer class="about-footer"></footer>
-    <!-- End About Footer -->
-    <!-- Start Copyright -->
-    <section class="about-copyright"></section>
+    <footer class="b-footer py-lg-5">
+        <div class="container py-5 py-lg-4">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-6 col-12 ">
+                    <div class="logo mb-3">
+                        <h4><a href="#">Diner</a></h4>
+                    </div>
+                    <p>Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet Semper at elit.</p>
+                    <div class="menu-socials mt-4">
+                        <a href="#facebook" class="facebook"><span class="fa-brand fa-facebook"></span></a>
+                        <a href="#twitter" class="twitter"><span class="fa-brand fa-twitter"></span></a>
+                        <a href="#instagram" class="instagram"><span class="fa-brand fa-instagram"></span></a>
+                        <a href="#linkedin" class="linkedin"><span class="fa-brand fa-linkedin-in"></span></a>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-6 col-sm-6 col-6 b-footer-list mt-mb-xs-5">
+                        <h6 class="b-footer-title">Usefull Links</h6>
+                    <ul>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="blog.html"> Blog posts</a></li>
+                        <li><a href="#"> Careers</a></li>
+                        <li><a href="#">Contact us</a></li>
+                      </ul>
+                </div>
+                <div class="col-lg-2 col-md-6 col-sm-6 col-6 b-footer-list mt-mb-md-5 mt-mb-sm-5 mt-mb-xs-5">
+                    <h6 class="b-footer-title">More Info</h6>
+                    <ul>
+                        <li><a href="#">History</a></li>
+                        <li><a href="#">Vision</a></li>
+                        <li><a href="#">Awards</a></li>
+                        <li><a href="#"> Media</a></li>
+                        <li><a href="#"> Support</a></li>
+                      </ul>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6 col-12 mt-mb-md-5 mt-mb-sm-5 mt-mb-xs-5">
+                    <h6 class="b-footer-title">Subscribe to our Newsletter </h6>
+                    <p>Enter your email and receive the latest news, updates and special offers from us.</p>
+                    <form action="#" class="subscribe mt-4" method="post">
+                        <input type="email" name="email" placeholder="Your Email Address" required="">
+                        <button class="btn btn-style btn-primary mt-3">Subscibe Now</button>
+                      </form>
+                </div>
+            </div>
+        </div>
+          <!-- Start Copyright -->
+    <section class="services-copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 copyright-item">
+                    <p class="">© 2021 Diner. All rights reserved. Design by <a href="#" target="_blank">
+                        W3Layouts</a></p>
+                </div>
+                <div class="col-lg-4 b-footer-list ">
+                    <ul class="d-flex">
+                        <li><a href="#">Careers</a></li>
+                        <li class="ms-5 me-5"><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Contact us</a></li>
+                      </ul>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- End Copyright -->
+    </footer>
+    <!-- End About Footer -->
+     <!-- Back-to-top -->
+   <div><a href="#" class="backtotop cd-top text-replace js-cd-top"><i class="fa-solid fa-arrow-turn-up"></i></a></div>
+   <!-- JQUERY JS -->
+   <script type="text/javascript" src="./assets/js/Vendor/jquery-3.6.0.min.js"></script>
+   <script
+     type="text/javascript"
+     src="./assets/js/Vendor/jquery-migrate-1.4.1.min.js"
+   ></script>
+    <!-- Bootstrap Bundle with Popper-->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
+    <script src="./assets/js/Vendor/bootstrap.bundle.min.js"></script>
+    <!-- BACK-TO-TOP -->
+    <script src="./assets/js/Vendor/util.js"></script>
+    <script src="./assets/js/Vendor/main-backtotop.js"></script>
+    <!-- Main Dev Js -->
+    <script src="./assets/js/dev-b-main.js"></script>
 </body>
 </html>
