--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                       <a href="404.html">404</a>
                       <a href="404.htm">Landing Page</a>
                       <a href="contact.html">Contact</a>
-                      <a href="404.htm">Shot Codes</a>
-                      <a href="404.htm">Email</a>
+                      <a href="404.html">Shot Codes</a>
+                      <a href="404.html">Email</a>
                     </div>
                   </div>
                 </div>
@@ -958,7 +958,15 @@
         },
       });
     </script>
-
+    <!-- Jquery waypoints import duoi thu vien jquery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"
+    integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- CountUp js -->
+    <script src="./assets/js/Vendor/jquery.countup.js"></script>
+    <script>
+    $('.counter').countUp();
+    </script>
     <script src="../js/index.js"></script>
   </body>
 </html>
