--- a/404.html
+++ b/404.html
@@ -39,8 +39,9 @@
     />
 
     <link rel="stylesheet" href="./assets/css/404.css" />
-
-    <title>Diner</title>
+    <!-- Link icon Cyber-->
+    <link rel = "icon" href ="https://login.cybersoft.edu.vn/favicon.ico" type = "image/x-icon">
+    <title>Diner Restaurants - Error</title>
   </head>
   <body>
     <header class="header-contact">
