--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,8 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;700&display=swap"
       rel="stylesheet"
     />
+     <!-- Link icon Cyber-->
+     <link rel = "icon" href ="https://login.cybersoft.edu.vn/favicon.ico" type = "image/x-icon">
     <!-- Font Pacifico -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -46,6 +48,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./assets/css/contact.css" />
+    <title>Diner Restaurants - Contact</title>
   </head>
   <body>
     <header class="header-contact">
