--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;700&display=swap"
       rel="stylesheet"
     />
+     <!-- Link icon Cyber-->
+     <link rel = "icon" href ="https://login.cybersoft.edu.vn/favicon.ico" type = "image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -61,7 +63,7 @@
 
     <!-- Style CSS  -->
     <link rel="stylesheet" href="./assets/css/home.css" />
-    <title>Diner</title>
+    <title>Diner Restaurants - Home</title>
   </head>
   <body>
     <header class="header">
