--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@
     <!-- Bootstrap CSS -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="./assets/css/Vendor/bootstrap.min.css">
+    <!-- Link icon Cyber-->
+    <link rel = "icon" href ="https://login.cybersoft.edu.vn/favicon.ico" type = "image/x-icon">
     <!-- Main CSS -->
     <link rel="stylesheet" href="./assets/css/dev-b-main.css">
     <style>
@@ -22,7 +24,7 @@
         /* font-family: 'Pacifico', cursive; */
         }
     </style>
-    <title>About</title>
+    <title>Diner Restaurants - About</title>
 </head>
 <body>
     <!-- Start Right-Bar -->
