--- a/index.html
+++ b/index.html
@@ -111,11 +111,12 @@
                   </div>
                 </div>
                 <div class="menu-btn mobile-nav-button">
+                  <!-- <div> -->
                   <button id="trigger-overlay" type="button">
                     <i class="fa-solid fa-bars" aria-hidden="true"></i>
                   </button>
                   <!-- <button type="button" class="menu-close" onclick="close_menu"><i class="fa fa-times"></i></button> -->
-                  <div class="menu-item">
+                  <!-- <div class="menu-item">
                     <div class="menu-list">
                       <a href="index.html">Home</a>
                       <a href="about.html">About</a>
@@ -127,7 +128,23 @@
                       <a href="404.html">Shot Codes</a>
                       <a href="404.html">Email</a>
                     </div>
-                  </div>
+                  </div> -->
+                  <div class="b-overlay b-overlay-scale">
+                    <button type="button" class="overlay-close"><i class="fa fa-times" aria-hidden="true"></i></button>
+                    <nav>
+                      <ul>
+                        <li><a href="index.html" class="active">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="404.html">404</a></li>
+                        <li><a href="404.html">Landing Page</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="404.html">Shot Codes</a></li>
+                        <li><a href="404.html">Email</a></li>
+                      </ul>
+                    </nav>
+                </div>
                 </div>
               </div>
             </div>
@@ -970,5 +987,6 @@
     $('.counter').countUp();
     </script>
     <script src="../js/index.js"></script>
+    <script src="./assets/js/dev-b-main.js"></script>
   </body>
 </html>
