--- a/404.html
+++ b/404.html
@@ -44,6 +44,38 @@
     <title>Diner Restaurants - Error</title>
   </head>
   <body>
+     <!-- Start Right-Bar -->
+     <div class="pull-right">
+      <span class="pull-left-button fa fa-angle-double-left b-dl-none"></span>
+   </div>
+  <div class="right-bar">
+      <div class="pull-right pull-right-position">
+          <span class="pull-right-button fa fa-angle-double-right "></span>
+       </div>
+      <div class="wrap-right-bar">
+          <div class="demo-btns">
+              <a href="#">
+                  <span class="b-icon-right-bar back">
+                      <span class="fa fa-arrow-left"></span>
+                  </span>
+                  <span class="b-text">Back</span>
+              </a>
+              <a href="#">
+                  <span class="b-icon-right-bar download">
+                      <span class="fa fa-download"></span>
+                  </span>
+                  <span class="b-text">Download</span>
+              </a>
+              <a href="#" class="">
+                  <span class="b-icon-right-bar buy">
+                      <span class="fa fa-shopping-cart"></span>
+                  </span>
+                  <span class="b-text">Buy</span>
+              </a>
+          </div>
+      </div>
+  </div>
+  <!-- End Right-Bar -->
     <header class="header-contact">
       <div class="container">
         <div class="main">
