--- a/services.html
+++ b/services.html
@@ -64,7 +64,7 @@
         <div class="container">
             <header class="b-header">
                     <div class="b-header__logo">
-                        <h1><a href="#">Diner</a></h1>
+                        <h1><a href="index.html">Diner</a></h1>
                     </div>
                     <div class="b-header__menu-right-content">
                         <div class="b-search-bar">
